week3/ex4/ex4Parser.output
   0  $accept : %entry% $end

   1  main : expr EOF

   2  command : expr SEMI
   3          | LET var var_expr SEMI
   4          | LET REC var var var_expr SEMI
   5          | LET REC var var var_expr and_expr SEMI

   6  expr : LET var var_expr IN expr
   7       | LET REC var var var_expr IN expr
   8       | LET REC var var EQ expr and_expr IN expr
   9       | IF expr THEN expr ELSE expr
  10       | expr EQ expr
  11       | expr LT expr
  12       | expr PLUS expr
  13       | expr MINUS expr
  14       | expr TIMES expr
  15       | expr DIV expr
  16       | FUN var ARROW expr
  17       | FUN var var ARROW expr
  18       | expr apply_expr
  19       | MATCH expr WITH pattern_expr END
  20       | expr CONS expr
  21       | cons_expr
  22       | apply_expr

  23  var_expr : EQ expr
  24           | var var_expr

  25  and_expr : AND var var var_expr and_expr
  26           |

  27  cons_expr : noncons_expr
  28            | expr CONS cons_expr

  29  noncons_expr : apply_expr
  30               | LPAR expr COMMA expr_list RPAR

  31  expr_list : expr
  32            | expr COMMA expr_list

  33  pattern_expr :
  34               | pattern ARROW expr
  35               | pattern ARROW expr OR pattern_expr

  36  pattern : INT
  37          | BOOL
  38          | ID
  39          | LBRACKET RBRACKET
  40          | LPAR pattern COMMA pattern_list RPAR
  41          | pattern CONS pattern

  42  pattern_list : pattern
  43               | pattern COMMA pattern_list

  44  apply_expr : INT
  45             | BOOL
  46             | ID
  47             | LPAR expr RPAR
  48             | LBRACKET RBRACKET

  49  var : ID

  50  %entry% : '\001' main
  51          | '\002' command

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . main  (50)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	main  goto 13
	expr  goto 14
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 2
	%entry% : '\002' . command  (51)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 18
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	command  goto 19
	expr  goto 20
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	apply_expr : INT .  (44)

	.  reduce 44


state 5
	apply_expr : BOOL .  (45)

	.  reduce 45


state 6
	apply_expr : ID .  (46)

	.  reduce 46


state 7
	expr : LET . var var_expr IN expr  (6)
	expr : LET . REC var var var_expr IN expr  (7)
	expr : LET . REC var var EQ expr and_expr IN expr  (8)

	ID  shift 21
	REC  shift 22
	.  error

	var  goto 23


state 8
	expr : IF . expr THEN expr ELSE expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 24
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 9
	noncons_expr : LPAR . expr COMMA expr_list RPAR  (30)
	apply_expr : LPAR . expr RPAR  (47)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 25
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 10
	expr : FUN . var ARROW expr  (16)
	expr : FUN . var var ARROW expr  (17)

	ID  shift 21
	.  error

	var  goto 26


state 11
	expr : MATCH . expr WITH pattern_expr END  (19)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 27
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 12
	apply_expr : LBRACKET . RBRACKET  (48)

	RBRACKET  shift 28
	.  error


state 13
	%entry% : '\001' main .  (50)

	.  reduce 50


state 14
	main : expr . EOF  (1)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	EOF  shift 36
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


15: reduce/reduce conflict (reduce 22, reduce 29) on INT
15: reduce/reduce conflict (reduce 22, reduce 29) on BOOL
15: reduce/reduce conflict (reduce 22, reduce 29) on ID
15: reduce/reduce conflict (reduce 22, reduce 29) on IN
15: reduce/reduce conflict (reduce 22, reduce 29) on PLUS
15: reduce/reduce conflict (reduce 22, reduce 29) on MINUS
15: reduce/reduce conflict (reduce 22, reduce 29) on TIMES
15: reduce/reduce conflict (reduce 22, reduce 29) on DIV
15: reduce/reduce conflict (reduce 22, reduce 29) on EQ
15: reduce/reduce conflict (reduce 22, reduce 29) on LT
15: reduce/reduce conflict (reduce 22, reduce 29) on THEN
15: reduce/reduce conflict (reduce 22, reduce 29) on ELSE
15: reduce/reduce conflict (reduce 22, reduce 29) on LPAR
15: reduce/reduce conflict (reduce 22, reduce 29) on RPAR
15: reduce/reduce conflict (reduce 22, reduce 29) on WITH
15: reduce/reduce conflict (reduce 22, reduce 29) on OR
15: reduce/reduce conflict (reduce 22, reduce 29) on END
15: reduce/reduce conflict (reduce 22, reduce 29) on SEMI
15: reduce/reduce conflict (reduce 22, reduce 29) on EOF
15: reduce/reduce conflict (reduce 22, reduce 29) on COMMA
15: reduce/reduce conflict (reduce 22, reduce 29) on CONS
15: reduce/reduce conflict (reduce 22, reduce 29) on LBRACKET
15: reduce/reduce conflict (reduce 22, reduce 29) on AND
state 15
	expr : apply_expr .  (22)
	noncons_expr : apply_expr .  (29)

	.  reduce 22


state 16
	expr : cons_expr .  (21)

	.  reduce 21


state 17
	cons_expr : noncons_expr .  (27)

	.  reduce 27


state 18
	command : LET . var var_expr SEMI  (3)
	command : LET . REC var var var_expr SEMI  (4)
	command : LET . REC var var var_expr and_expr SEMI  (5)
	expr : LET . var var_expr IN expr  (6)
	expr : LET . REC var var var_expr IN expr  (7)
	expr : LET . REC var var EQ expr and_expr IN expr  (8)

	ID  shift 21
	REC  shift 39
	.  error

	var  goto 40


state 19
	%entry% : '\002' command .  (51)

	.  reduce 51


state 20
	command : expr . SEMI  (2)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	SEMI  shift 41
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 21
	var : ID .  (49)

	.  reduce 49


state 22
	expr : LET REC . var var var_expr IN expr  (7)
	expr : LET REC . var var EQ expr and_expr IN expr  (8)

	ID  shift 21
	.  error

	var  goto 42


state 23
	expr : LET var . var_expr IN expr  (6)

	ID  shift 21
	EQ  shift 43
	.  error

	var  goto 44
	var_expr  goto 45


state 24
	expr : IF expr . THEN expr ELSE expr  (9)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	THEN  shift 46
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 25
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)
	noncons_expr : LPAR expr . COMMA expr_list RPAR  (30)
	apply_expr : LPAR expr . RPAR  (47)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	RPAR  shift 47
	COMMA  shift 48
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 26
	expr : FUN var . ARROW expr  (16)
	expr : FUN var . var ARROW expr  (17)

	ID  shift 21
	ARROW  shift 49
	.  error

	var  goto 50


state 27
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : MATCH expr . WITH pattern_expr END  (19)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	WITH  shift 51
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 28
	apply_expr : LBRACKET RBRACKET .  (48)

	.  reduce 48


state 29
	expr : expr PLUS . expr  (12)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 52
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 30
	expr : expr MINUS . expr  (13)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 53
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 31
	expr : expr TIMES . expr  (14)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 54
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 32
	expr : expr DIV . expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 55
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 33
	expr : expr EQ . expr  (10)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 56
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 34
	expr : expr LT . expr  (11)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 57
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 35
	apply_expr : LPAR . expr RPAR  (47)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 58
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 36
	main : expr EOF .  (1)

	.  reduce 1


state 37
	expr : expr CONS . expr  (20)
	cons_expr : expr CONS . cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 59
	apply_expr  goto 15
	cons_expr  goto 60
	noncons_expr  goto 17


state 38
	expr : expr apply_expr .  (18)

	.  reduce 18


state 39
	command : LET REC . var var var_expr SEMI  (4)
	command : LET REC . var var var_expr and_expr SEMI  (5)
	expr : LET REC . var var var_expr IN expr  (7)
	expr : LET REC . var var EQ expr and_expr IN expr  (8)

	ID  shift 21
	.  error

	var  goto 61


state 40
	command : LET var . var_expr SEMI  (3)
	expr : LET var . var_expr IN expr  (6)

	ID  shift 21
	EQ  shift 43
	.  error

	var  goto 44
	var_expr  goto 62


state 41
	command : expr SEMI .  (2)

	.  reduce 2


state 42
	expr : LET REC var . var var_expr IN expr  (7)
	expr : LET REC var . var EQ expr and_expr IN expr  (8)

	ID  shift 21
	.  error

	var  goto 63


state 43
	var_expr : EQ . expr  (23)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 64
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 44
	var_expr : var . var_expr  (24)

	ID  shift 21
	EQ  shift 43
	.  error

	var  goto 44
	var_expr  goto 65


state 45
	expr : LET var var_expr . IN expr  (6)

	IN  shift 66
	.  error


state 46
	expr : IF expr THEN . expr ELSE expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 67
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 47
	apply_expr : LPAR expr RPAR .  (47)

	.  reduce 47


state 48
	noncons_expr : LPAR expr COMMA . expr_list RPAR  (30)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 68
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17
	expr_list  goto 69


state 49
	expr : FUN var ARROW . expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 70
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 50
	expr : FUN var var . ARROW expr  (17)

	ARROW  shift 71
	.  error


state 51
	expr : MATCH expr WITH . pattern_expr END  (19)
	pattern_expr : .  (33)

	INT  shift 72
	BOOL  shift 73
	ID  shift 74
	LPAR  shift 75
	LBRACKET  shift 76
	END  reduce 33

	pattern_expr  goto 77
	pattern  goto 78


state 52
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr PLUS expr .  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	WITH  reduce 12
	OR  reduce 12
	END  reduce 12
	SEMI  reduce 12
	EOF  reduce 12
	COMMA  reduce 12
	CONS  reduce 12
	AND  reduce 12

	apply_expr  goto 38


state 53
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr MINUS expr .  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	WITH  reduce 13
	OR  reduce 13
	END  reduce 13
	SEMI  reduce 13
	EOF  reduce 13
	COMMA  reduce 13
	CONS  reduce 13
	AND  reduce 13

	apply_expr  goto 38


state 54
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr TIMES expr .  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	TIMES  reduce 14
	DIV  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	WITH  reduce 14
	OR  reduce 14
	END  reduce 14
	SEMI  reduce 14
	EOF  reduce 14
	COMMA  reduce 14
	CONS  reduce 14
	AND  reduce 14

	apply_expr  goto 38


state 55
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr DIV expr .  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LPAR  shift 35
	LBRACKET  shift 12
	IN  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	TIMES  reduce 15
	DIV  reduce 15
	EQ  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	WITH  reduce 15
	OR  reduce 15
	END  reduce 15
	SEMI  reduce 15
	EOF  reduce 15
	COMMA  reduce 15
	CONS  reduce 15
	AND  reduce 15

	apply_expr  goto 38


state 56
	expr : expr . EQ expr  (10)
	expr : expr EQ expr .  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 10
	EQ  reduce 10
	LT  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	WITH  reduce 10
	OR  reduce 10
	END  reduce 10
	SEMI  reduce 10
	EOF  reduce 10
	COMMA  reduce 10
	AND  reduce 10

	apply_expr  goto 38


state 57
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr LT expr .  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 11
	EQ  reduce 11
	LT  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	WITH  reduce 11
	OR  reduce 11
	END  reduce 11
	SEMI  reduce 11
	EOF  reduce 11
	COMMA  reduce 11
	AND  reduce 11

	apply_expr  goto 38


state 58
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)
	apply_expr : LPAR expr . RPAR  (47)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	RPAR  shift 47
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 59
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	expr : expr CONS expr .  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 20
	EQ  reduce 20
	LT  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	WITH  reduce 20
	OR  reduce 20
	END  reduce 20
	SEMI  reduce 20
	EOF  reduce 20
	COMMA  reduce 20
	AND  reduce 20

	apply_expr  goto 38


60: reduce/reduce conflict (reduce 21, reduce 28) on INT
60: reduce/reduce conflict (reduce 21, reduce 28) on BOOL
60: reduce/reduce conflict (reduce 21, reduce 28) on ID
60: reduce/reduce conflict (reduce 21, reduce 28) on IN
60: reduce/reduce conflict (reduce 21, reduce 28) on PLUS
60: reduce/reduce conflict (reduce 21, reduce 28) on MINUS
60: reduce/reduce conflict (reduce 21, reduce 28) on TIMES
60: reduce/reduce conflict (reduce 21, reduce 28) on DIV
60: reduce/reduce conflict (reduce 21, reduce 28) on EQ
60: reduce/reduce conflict (reduce 21, reduce 28) on LT
60: reduce/reduce conflict (reduce 21, reduce 28) on THEN
60: reduce/reduce conflict (reduce 21, reduce 28) on ELSE
60: reduce/reduce conflict (reduce 21, reduce 28) on LPAR
60: reduce/reduce conflict (reduce 21, reduce 28) on RPAR
60: reduce/reduce conflict (reduce 21, reduce 28) on WITH
60: reduce/reduce conflict (reduce 21, reduce 28) on OR
60: reduce/reduce conflict (reduce 21, reduce 28) on END
60: reduce/reduce conflict (reduce 21, reduce 28) on SEMI
60: reduce/reduce conflict (reduce 21, reduce 28) on EOF
60: reduce/reduce conflict (reduce 21, reduce 28) on COMMA
60: reduce/reduce conflict (reduce 21, reduce 28) on CONS
60: reduce/reduce conflict (reduce 21, reduce 28) on LBRACKET
60: reduce/reduce conflict (reduce 21, reduce 28) on AND
state 60
	expr : cons_expr .  (21)
	cons_expr : expr CONS cons_expr .  (28)

	.  reduce 21


state 61
	command : LET REC var . var var_expr SEMI  (4)
	command : LET REC var . var var_expr and_expr SEMI  (5)
	expr : LET REC var . var var_expr IN expr  (7)
	expr : LET REC var . var EQ expr and_expr IN expr  (8)

	ID  shift 21
	.  error

	var  goto 79


state 62
	command : LET var var_expr . SEMI  (3)
	expr : LET var var_expr . IN expr  (6)

	IN  shift 66
	SEMI  shift 80
	.  error


state 63
	expr : LET REC var var . var_expr IN expr  (7)
	expr : LET REC var var . EQ expr and_expr IN expr  (8)

	ID  shift 21
	EQ  shift 81
	.  error

	var  goto 44
	var_expr  goto 82


state 64
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	var_expr : EQ expr .  (23)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 23
	SEMI  reduce 23
	AND  reduce 23

	apply_expr  goto 38


state 65
	var_expr : var var_expr .  (24)

	.  reduce 24


state 66
	expr : LET var var_expr IN . expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 83
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 67
	expr : IF expr THEN expr . ELSE expr  (9)
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	ELSE  shift 84
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	.  error

	apply_expr  goto 38


state 68
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)
	expr_list : expr .  (31)
	expr_list : expr . COMMA expr_list  (32)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	COMMA  shift 85
	CONS  shift 37
	LBRACKET  shift 12
	RPAR  reduce 31

	apply_expr  goto 38


state 69
	noncons_expr : LPAR expr COMMA expr_list . RPAR  (30)

	RPAR  shift 86
	.  error


state 70
	expr : expr . EQ expr  (10)
	expr : expr . LT expr  (11)
	expr : expr . PLUS expr  (12)
	expr : expr . MINUS expr  (13)
	expr : expr . TIMES expr  (14)
	expr : expr . DIV expr  (15)
	expr : FUN var ARROW expr .  (16)
	expr : expr . apply_expr  (18)
	expr : expr . CONS expr  (20)
	cons_expr : expr . CONS cons_expr  (28)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	PLUS  shift 29
	MINUS  shift 30
	TIMES  shift 31
	DIV  shift 32
	EQ  shift 33
	LT  shift 34
	LPAR  shift 35
	CONS  shift 37
	LBRACKET  shift 12
	IN  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	WITH  reduce 16
	OR  reduce 16
	END  reduce 16
	SEMI  reduce 16
	EOF  reduce 16
	COMMA  reduce 16
	AND  reduce 16

	apply_expr  goto 38


state 71
	expr : FUN var var ARROW . expr  (17)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	MATCH  shift 11
	LBRACKET  shift 12
	.  error

	expr  goto 87
	apply_expr  goto 15
	cons_expr  goto 16
	noncons_expr  goto 17


state 72
	pattern : INT .  (36)

	.  reduce 36


state 73
	pattern : BOOL .  (37)

	.  reduce 37


state 74
	pattern : ID .  (38)

	.  reduce 38


state 75
	pattern : LPAR . pattern COMMA pattern_list RPAR  (40)

	INT  shift 72
	BOOL  shift 73
	ID  shift 74
	LPAR  shift 75
	LBRACKET  shift 76
	.  error

	pattern  goto 88


state 76
	pattern : LBRACKET . RBRACKET  (39)

	RBRACKET  shift 89
	.  error


state 77
	expr : MATCH expr WITH pattern_expr . END  (19)

	END  shift 90
	.  error


state 78
	pattern_expr : pattern . ARROW expr  (34)
	pattern_expr : pattern . ARROW expr OR pattern_expr  (35)
	pattern : pattern . CONS pattern  (41)

	ARROW  shift 91
	CONS  shift 92
	.  error

